# gil-olzhas

.ci/: build-and-test.sh  get-boost.sh
include/boost/gil/detail/: math.hpp
include/boost/gil/image_processing/: numeric.hpp  scaling.hpp
test/: CMakeLists.txt  Jamfile
test/image_processing/: CMakeLists.txt  Jamfile  lanczos_scaling.cpp
